Tagging the 2.0.4 Release